Fixed the mail icon overflow

--- a/css/index.css
+++ b/css/index.css
@@ -445,7 +445,7 @@
 .contact-email {
     position: absolute;
 
-    font-size: 30rem;
+    font-size: 20rem;
     color: rgba(255,255,255,0.03);
 }
 
